--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 <body>
     <section class = "sub-header4">
         <nav>
-            <a href="index.html"><img src="images/logo.png"></a>
+            <a href="index.html"><img src="images/TSALogo.png"></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick ="hideMenu()"></i>
                 <ul>
